# steam-audio

./: .gitignore  CMakeLists.txt  README.md
doc/: ambisonics-binaural-effect.html  ambisonics-decode-effect.html  ambisonics-encode-effect.html  ambisonics-panning-effect.html  ambisonics-rotation-effect.html  audio-buffers.html  baking.html  binaural-effect.html  context.html  direct-effect.html  embree.html  genindex.html  geometry.html  getting-started.html  guide.html  hrtf.html  index.html  integration.html  opencl.html  panning-effect.html  path-effect.html  probes.html  radeon-rays.html  reference.html  reflections-effect.html  scene.html  search.html  serialization.html  simulation.html  trueaudio-next.html  types.html  virtual-surround-effect.html
example/: CMakeLists.txt  main.cpp
include/: phonon_version.h
lib/windows-x64/: phonon.lib
